--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
+    "commander": "^8.2.0",
     "joi": "^17.4.2",
     "mongodb": "^4.1.2",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +36,8 @@
     "@nestjs/cli": "^8.1.2",
     "@nestjs/schematics": "^8.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.12.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
