--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
+    "console-table-printer": "^2.10.0",
     "joi": "^17.4.2",
     "mongodb": "^4.1.2",
     "reflect-metadata": "^0.1.13",
