--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "console-table-printer": "^2.10.0",
+    "handlebars": "^4.7.7",
     "joi": "^17.4.2",
     "mongodb": "^4.1.2",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +43,7 @@
     "@types/commander": "^2.12.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/handlebars": "^4.1.0",
     "@types/node": "^16.0.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
