--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
+    "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "commander": "^8.2.0",
     "console-table-printer": "^2.10.0",
     "handlebars": "^4.7.7",
