--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "target": "es2017",
+    "strict": false,
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
