--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongodb": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.2",
@@ -46,7 +47,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/handlebars": "^4.1.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/sharp": "^0.29.4",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
