--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "API Service of im1",
   "author": {
-    "name": "Developar Team",
-    "email": "mail@developar.in",
-    "url": "https://developar.in"
+    "name": "Rajat Sharma",
+    "email": "rajat@developar.in",
+    "url": "https://github.com/rajatxs"
   },
   "private": true,
   "license": "UNLICENSED",
