--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
+    "start": "node dist/main",
     "build": "nest build",
-    "start": "nest start",
+    "nest:start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main"
+    "start:debug": "nest start --debug --watch"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
