--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": false,
     "sourceMap": false,
     "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": "./",
     "paths": {
       "@utils/*": ["src/@utils/*"],
@@ -21,7 +22,7 @@
       "@config/*": ["src/@config/*"],
       "@http-request/*": ["src/http-request/*"]
     },
-    "incremental": true,
+    "incremental": false,
     "skipLibCheck": true
   }
 }
