--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/avatars-initials-sprites": "^4.10.2",
     "@rxpm/logger": "^1.0.0",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.23.0",
@@ -28,9 +30,13 @@
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "form-data": "^4.0.0",
     "handlebars": "^4.7.7",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "mongodb": "^4.1.2",
+    "multer": "^1.4.4",
     "sharp": "^0.29.3"
   },
   "devDependencies": {
