--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
    "$schema": "https://json.schemastore.org/jsconfig",
    "compilerOptions": {
-      "strict": true,
+      "strict": false,
       "checkJs": true,
       "moduleResolution": "Node",
       "target": "ESNext",
