Remov sharp lib

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mime": "^3.0.0",
     "mongodb": "^4.1.2",
-    "multer": "^1.4.4",
-    "sharp": "^0.29.3"
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
