--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
    "$schema": "https://json.schemastore.org/jsconfig",
    "compilerOptions": {
       "strict": false,
-      "module": "node12",
+      "module": "ESNext",
       "checkJs": true,
       "moduleResolution": "Node",
       "target": "ESNext",
